fix breadcrumbs dark theme color; add spacing to homepage; add breadcrumbs to archives

--- a/src/css/exceptions/_dark.scss
+++ b/src/css/exceptions/_dark.scss
@@ -47,6 +47,7 @@
 	:is(abbr, dfn)[title],
 	figure > a figcaption,
 	blockquote cite,
+	.breadcrumbs,
 	.fragment-anchor,
 	.webmentions__response small {
 		color: h(alto);
